# giskard_sandbox

./: README.md
giskard_task_database/: CMakeLists.txt  README.md  package.xml
giskard_task_database/config/: dummy_db.yaml  learned_db.yaml  pouring_bottle_cup.pkl
giskard_task_database/launch/: task_database.launch
giskard_task_database/scripts/: dummy_query.py  learning_clean.py  myutil.py  myutil_clean.py  task_database.py
